--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ build_flags =
   -D ARDUINO_USB_CDC_ON_BOOT=1
   -D ARDUINO_USB_MODE=1
   -D BOARD_HAS_PSRAM
+  -D LV_CONF_INCLUDE_SIMPLE
   -D LV_USE_DRAW_SW_ASM=LV_DRAW_SW_ASM_NONE
   -D LV_DRAW_SW_ASM_NEON=0
   -D LV_DRAW_SW_ASM_HELIUM=0
