--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,9 @@ board_build.flash_size = 16MB
 board_build.psram_type = opi
 board_build.arduino.memory_type = qio_opi
 framework = arduino
-lib_deps = https://github.com/moononournation/Arduino_GFX.git#v1.6.0
+lib_deps =
+  https://github.com/moononournation/Arduino_GFX.git#v1.6.0
+  h2zero/NimBLE-Arduino@^1.4.1
 build_flags =
   -D ARDUINO_USB_CDC_ON_BOOT=1
   -D ARDUINO_USB_MODE=1
@@ -24,6 +26,7 @@ build_flags =
   -D LV_USE_DRAW_SW_ASM=LV_DRAW_SW_ASM_NONE
   -D LV_DRAW_SW_ASM_NEON=0
   -D LV_DRAW_SW_ASM_HELIUM=0
+  -D ARDUINO_LOOP_STACK_SIZE=16384
   -I src
   -I src/core
 src_filter =
